fix page layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -90,22 +90,24 @@ body {
 /* WRAPPERS */
 
 .wrapper {
-    width: 100%;
+    width: auto;
     display: grid;
-    grid-template-columns: 1fr 2fr auto 1fr;
+    grid-template-columns: 1fr minmax(auto, 2fr) minmax(auto, 3fr)  1fr;
     grid-template-rows: 1fr auto 1fr;
     grid-template-areas:
         ". info proj ."
         ". shea proj ."
         ". writing proj ."
-        /* ". . today ." */
     ;
-    margin: 64px 24px;
-    gap: 24px 48px;
+    margin: 64px 24px 48px 64px;
+    gap: 12px 0;
 }
 
 .projects {
     grid-area: proj;
+    margin-block-end: 0;
+    margin-left: 48px;
+    height: fit-content;
 }
 
 .info {
@@ -114,11 +116,16 @@ body {
 
 .writing {
     grid-area: writing;
+    display: flex;
+    flex-direction: column;
+    justify-items: baseline;
+    margin-block-start: auto;
 }
 
 
 .shea {
     grid-area: shea;
+    margin-top: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -132,11 +139,9 @@ p.today {
     margin-top: 12px;
 }
 
-
-
-div.shea > img {
-    max-width: 80%;
-    height: auto;
+.shea img {
+    max-width: 60%;
+    max-height: 100%;
     border-radius: 100%;
     filter: drop-shadow(0 0 20px rgba(24, 24, 196, .25)) blur(17px);
     border: .5px solid var(--mid);
@@ -152,11 +157,23 @@ div.banner {
     font-size: 1rem;
     color: var(--text);
     font-style: italic;
-    z-index: 1000;
     position: absolute;
+    height: 25px;
+    z-index: 1000;
     mix-blend-mode: difference;
 }
 
+
+.footer {
+    font-family: var(--font-h);
+    display: flex;
+    justify-content: center;
+    font-style: italic;
+    margin-bottom: 24px;
+    color: var(--text);
+    font-size: .875rem;
+    letter-spacing: .1px;
+}
 
 
 .header {
@@ -204,6 +221,7 @@ audio {
     display: flex;
     gap: 24px;
     width: 100%;
+    height: auto;
     border-bottom: .75px solid var(--mid);
 }
 
@@ -211,7 +229,11 @@ audio {
     display: flex;
     width: 120px;
     justify-content: center;
-    /* object-fit: cover; */
+}
+
+.proj-list {
+    display: flex;
+    flex-direction: column;
 }
 
 .proj-content {
@@ -565,6 +587,17 @@ h2 {
     font-size: 1.75rem;
 }
 
+@media only screen and (max-width: 900px) {
+    .wrapper {
+        grid-template-columns: minmax(auto, 1fr) minmax(auto, 2fr);
+        grid-template-areas: 
+            "info proj"
+            "shea proj"
+            "writing proj";
+        margin: 64px;
+        margin-bottom: 48px;
+    }
+}
 
 
 @media only screen and (max-width: 600px) {
@@ -606,6 +639,10 @@ h2 {
         margin-left: 4px;
         display: inline;
         width: 10px;
+    }
+
+    .projects {
+        margin-left: 0;
     }
 
 
@@ -679,7 +716,7 @@ h2 {
         padding-bottom: 0;
     }
 
-    .shea {
+    .grid {
         width: 60%;
         margin: 24px auto;
     }
